# ChessML

./: .gitignore  CONTRIBUTING.md  Gemfile  Justfile  README.md  _config.yml  chessml.opam  dune-project  index.md
.github/workflows/: deploy-docs.yml
_sass/custom/: custom.scss
docs/: README.md  alpha-beta-pruning.md  bitboards.md  chess-programming-guide.md  evaluation-function.md  first_win_stockfish_0.pgn  late-move-reductions.md  magic-bitboards.md  move-ordering.md  null-move-pruning.md  opening-books.md  quiescence-search.md  static-exchange-evaluation.md  transposition-tables.md  zobrist-hashing.md
examples/: README.md  bench_breakdown.ml  book_test.ml  check_failing_eval.ml  compare_search_implementations.ml  create_expanded_book.ml  dump_book.ml  dune  history_demo.ml  move_ordering_demo.ml  parallel_bench.ml  parallel_quality_test.ml  perft_example.ml  polyglot_demo.ml  profile_test.ml  quick_parallel_test.ml  quiescence_test.ml  search_bench.ml  search_book.ml  search_example.ml  search_single_bench.ml  speedup_analysis.ml  test_book_weights.ml  test_castling_incentive.ml  test_development.ml  test_futility.ml  test_lmr.ml  test_null_move.ml
lib/: chessml.ml  dune
lib/core/: bitboard.ml  bitboard.mli  bitboard_stubs.c  dune  move.ml  move.mli  square.ml  square.mli  types.ml  types.mli
lib/engine/: concurrent_tt.ml  concurrent_tt.mli  config.ml  config.mli  countermoves.ml  countermoves.mli  dune  eval.ml  eval.mli  eval_endgame.ml  eval_helpers.ml  eval_king_safety.ml  eval_old.ml.bak  eval_pawn_structure.ml  eval_pieces.ml  game.ml  game.mli  history.ml  history.mli  killers.ml  killers.mli  magic.ml  magic.mli  movegen.ml  movegen.mli  opening_book.ml  opening_book.mli  parallel_search.ml  parallel_search.mli  pawn_cache.ml  pawn_cache.mli  perft.ml  perft.mli  pgn_parser.ml  pgn_parser.mli  piece_tables.ml  piece_tables.mli  polyglot.ml  polyglot.mli  position.ml  (+11 more)
lib/protocols/: dune  uci.ml  uci.mli  xboard.ml  xboard.mli
scripts/: download_openings.fish  test_elo.fish  test_opening.fish
test/: dune  test_integration.ml
test/core/: dune  test_bitboard.ml  test_move.ml  test_square.ml  test_types.ml
test/engine/: dune  test_castling.ml  test_en_passant.ml  test_endgame.ml  test_eval.ml  test_game.ml  test_history.ml  test_illegal_move_regression.ml  test_killers.ml  test_mvv_lva.ml  test_pawn_cache.ml  test_pawn_structure.ml  test_pgn_parser.ml  test_position.ml  test_promotion.ml  test_repetition.ml  test_search.ml  test_see.ml  test_threat_detection.ml  test_zobrist.ml
test/protocols/: dune  test_uci.ml  test_xboard.ml
