(library
 (name chessml_engine)
 (public_name chessml.engine)
 (flags
  (:standard -w -32-69))
 (libraries chessml.core unix threads.posix str)
 (modules
  config
  killers
  history
  countermoves
  pawn_cache
  piece_tables
  see
  search_common
  concurrent_tt
  parallel_search
  root_split_search
  position
  magic
  movegen
  zobrist
  game
  eval_helpers
  eval_pawn_structure
  eval_pieces
  eval_king_safety
  eval_endgame
  eval
  search
  perft
  polyglot
  opening_book
  pgn_parser))
